2012-09-08  kitone  <kitone@gna.org>

	* plugins/actions/adjusttime/adjusttime.cc:
	Adds functions to move subtitle start and end by 1 frame. Patch by Tomas Partl <eltomito>.

2012-09-08  kitone  <kitone@gna.org>

	* plugins/actions/dialoguize/dialog-dialoguize-preferences.ui:
	Changes the preference dialog source file so that it doesn't need gtk+ 3.0 and settles for version 2.16.
	Patch by Tomas Partl <eltomito>.

2012-09-08  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/gui/checkbuttonwithmemory.cc:
	* src/gui/checkbuttonwithmemory.h:
	* src/gui/dialogfilechooser.cc:
	* src/gui/dialogfilechooser.h:
	Refactoring code, remove checkbuttonwithmemory and use instead
	widget_config. Tomas Partl <eltomito>.

2012-09-08  kitone  <kitone@gna.org>

	* plugins/actions/errorchecking/tooshortdisplaytime.h:
	Fix bug #20154 : CPS checking inconsistencyt. Tomas Partl <eltomito>.

2012-09-08  kitone  <kitone@gna.org>

	* plugins/actions/preferences/dialog-preferences.ui:
	Fix bug #19728 : Preferences window cannot be resized and decription of
	plugins do not fit in it. Tomas Partl <eltomito>.

2012-08-20  kitone  <kitone@gna.org>

	* plugins/actions/keyframesmanagement/Makefile.am:
	* plugins/actions/keyframesmanagement/keyframesgeneratorusingframe.cc:
	* plugins/actions/keyframesmanagement/keyframesmanagement.cc:
	Fix bug #20074 : Scene cut based keyframe detection. Patch by Martin Doucha.

2012-05-27  kitone  <kitone@gna.org>

	* configure.in:
	Fix bug #19629 : Requirements have changed. gstreamermm >= 0.10.6.

2012-05-27  kitone  <kitone@gna.org>

	* plugins/actions/selection/selection.cc:
	Fix bug #19700 : Add "select none" to Selection menu.

2012-05-27  kitone  <kitone@gna.org>

	* plugins/actions/findandreplace/findandreplace.cc:
	Fix bug #19709 : In glib-2.32, glib/gregex.h cannot be included directly.	Patch by Andre Reinke <andre.reinke>

2012-05-27  kitone  <kitone@gna.org>

	* plugins/actions/plaintext/plaintext.cc:
	* share/ui/dialog-export-text.ui: