@@ -46,6 +46,7 @@ public:
 	}
 
 	/*
+	 *
 	 */
 	void activate()
 	{
@@ -55,9 +56,13 @@ public:
 		action_group = Gtk::ActionGroup::create("MinimizeDurationPlugin");
 
 		action_group->add(
-				Gtk::Action::create("minimize-duration", _("_Minimize Duration"),
-				_("Compact each selected subtitle to its minimum permissible duration.")),
-					sigc::mem_fun(*this, &MinimizeDurationPlugin::on_minimize_duration));
+				Gtk::Action::create("minimize-duration", _("_Minimize Duration From Start"),
+				_("Compact each selected subtitle to its minimum permissible duration, start time is unchanged.")),
+					sigc::mem_fun(*this, &MinimizeDurationPlugin::on_minimize_duration_from_start));
+		action_group->add(
+				Gtk::Action::create("minimize-duration-from-end", _("M_inimize Duration From End"),
+				_("Compact each selected subtitle to its minimum permissible duration, end time is unchanged.")),
+					sigc::mem_fun(*this, &MinimizeDurationPlugin::on_minimize_duration_from_end));
 
 		// ui
 		Glib::RefPtr<Gtk::UIManager> ui = get_ui_manager();
@@ -67,9 +72,11 @@ public:
 		ui->insert_action_group(action_group);
 
 		ui->add_ui(ui_id, "/menubar/menu-timings/minimize-duration", "minimize-duration", "minimize-duration");
+		ui->add_ui(ui_id, "/menubar/menu-timings/minimize-duration-from-end", "minimize-duration-from-end", "minimize-duration-from-end");
 	}
 
 	/*
+	 *
 	 */
 	void deactivate()
 	{
@@ -82,6 +89,7 @@ public:
 	}
 
 	/*
+	 *
 	 */
 	void update_ui()
 	{
@@ -90,58 +98,98 @@ public:
 		bool visible = (get_current_document() != NULL);
 
 		action_group->get_action("minimize-duration")->set_sensitive(visible);
+		action_group->get_action("minimize-duration-from-end")->set_sensitive(visible);
 	}
 
 protected:
 
+	/*
+	 *
+	 */
+	void on_minimize_duration_from_start()
+	{
+		se_debug(SE_DEBUG_PLUGINS);
+
+		execute(true);
+	}
 
 	/*
+	 *
 	 */
-	void on_minimize_duration()
+	void on_minimize_duration_from_end()
+	{
+		se_debug(SE_DEBUG_PLUGINS);
+
+		execute(false);
+	}
+
+	/*
+	 *
+	 */
+	bool execute(bool from_start)
 	{
 		se_debug(SE_DEBUG_PLUGINS);
 
 		Document *doc = get_current_document();
 
-		g_return_if_fail(doc);
+		g_return_val_if_fail(doc, false);
 
 		Subtitles subtitles = doc->subtitles();
 
+		//NOTE:	the selection returned is always sorted regardless of the order the user clicked on the subtitles in
+		//	or at least it was when I tried it.
 		std::vector<Subtitle> selection = subtitles.get_selection();
 
-		if( selection.size() < 1 )
+		unsigned int subcnt = selection.size();
+
+		if( subcnt < 1 )
 		{
 			doc->flash_message(_("Minimize Duration needs at least 1 subtitle to work on."));
-			return;
+			return false;
 		}
 
-		// Get relevant preferences
+		// get relevant preferences
 		Config &cfg = get_config();
 
 		SubtitleTime mindur = cfg.get_value_int("timing", "min-display");
 		unsigned long maxcps = cfg.get_value_int("timing", "max-characters-per-second");
 
-		// Take each subtitle and set its duration to the permissible minimum
+		doc->start_command(_("Minimize Durations"));
+
+		Glib::ustring subtext = "";
+		Subtitle *sub = (Subtitle *)NULL;
+
+		//take each subtitle and set its duration to the permissible minimum
 		unsigned long subchars = 0;
 		SubtitleTime dur;
 
-		doc->start_command(_("Minimize Durations"));
-
-		for(guint i=0; i< selection.size(); ++i)
+		for(unsigned int i=0; i < subcnt; ++i)
 		{
-			Subtitle &sub = selection[i];
-			//subchars = utility::get_text_length_for_timing( sub->get_text() );
-
-			dur.totalmsecs = utility::get_min_duration_msecs( sub.get_text(), maxcps );
-
+			sub = &selection[i];
+			subtext = sub->get_text();
+			subchars = utility::get_text_length_for_timing( subtext );
+			dur.totalmsecs = utility::get_min_duration_msecs( subchars, maxcps );
+			//doc->flash_message ( _("duration calculated is 1000 * %i / %i = %i"), (int)subchars, (int)maxcps, (int)dur.totalmsecs );
 			//make sure we have at least the minimum duration
 			if( dur < mindur )
 				dur = mindur;
-			sub.set_duration( dur );
+
+			if( from_start )
+			{
+				//the start time is fixed, we are changind the end time
+				sub->set_duration( dur );
+			}
+			else
+			{
+				//the end time is fixed, we are changing the start time
+				SubtitleTime endtime = sub->get_end();
+				sub->set_start_and_end( endtime-dur, endtime );
+			}
 		}
 
 		doc->emit_signal("subtitle-time-changed");
 		doc->finish_command();
+		return true;
 	}
 	
 protected:
